--- a/angular.json
+++ b/angular.json
@@ -90,9 +90,16 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/@fortawesome/fontawesome-free/js/all.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node-modules/jquety/dist/jquery.min.js"
+            ]
           }
         }
       }
